--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title"         content="<?=name_app?>"/>
     <meta property="og:description"   content="<?=description_app?>" />
     <meta property="og:image:secure_url:" content="assets/images/logo.jpeg"/>
-    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" type="text/css" href="fontawesome-free-5.8.2-web/css/all.min.css">
