Que es el web hosting

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script type="text/javascript" src="js/jQuery3.4.1.js"></script>
     <script type="text/javascript" src="js/scrollspy-jquery.js"></script>
     
-	<title>Ricardo Cuanalo | Programmer </title>
+	<title> Ricardo Cuanalo | Programmer </title>
 </head>
 <body>
 
@@ -68,11 +68,13 @@
 	<div class="section-items container">
 		<div class="row">
 			<div class="info-item col-12 col-md-4 wow zoomIn">
+				<a href="#info">
 				<div class="icon-item">
 					<i class="fas fa-server"></i>
 				</div>
 						
 				<p>Web Hosting</p>
+				</a>
 			</div>
 			<div class="info-item col-12 col-md-4 wow zoomIn">	 <div class="icon-item">
 					<i class="fas fa-mobile-alt"></i>
@@ -90,6 +92,25 @@
 		</div>
 	</div>
 </header>
+
+<section id="info" class="container-fluid">
+	<div class="container">
+		<div class="info wow fadeInRight">
+			<h2>¿Qué es el web hosting?</h2>
+			<p>
+				<br>
+				Es el servicio que prestan empresas dedicadas a administrar servidores (computadoras conectadas a internet tiempo completo)  donde tu página web se 
+				almacena para que al teclear en google algo como: mipagina.com, tu página sea vista desde cualquier parte del mundo.
+				<br><br>
+				Sin nombres de <b>dominio</b> tendriamos que recordar la direccion IP del servidor donde está almacenada nuestra página web, algo asi: 187.198.67.890, 
+				esto es muy poco práctico!. 
+				<br>
+				Por lo que si tienes un nombre de dominio (mipagina.com) lo puedes vincular con tu servicio de hosting y ahora en lugar 
+				del número estratosférico como el que vimos anteriormente podemos solo usar el dominio que compramos (mipagina.com).
+			</p>	
+		</div>
+	</div>
+</section>
 
 <section id="portfolio">
 	<h1>Portafolio</h1>
@@ -219,8 +240,8 @@
 	</div>
 </section>
 
-<footer class="wow fadeInRight">
-	<div class="container">
+<footer>
+	<div class="container wow fadeInRight">
 		<a href="#" id="email" class="copy" title="cuanaloricardo@gmail.com">	<i class="fas fa-envelope"></i> cuanaloricardo@gmail.com </a>
 		<p>Ricardo Cuanalo | 2019</p>
 		<a href="https://wa.me/5212227420516" target="_blank"><i class="fab fa-whatsapp"></i> +52 (1) 222 742 0516</a>
