--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 	<div class="container wow fadeInRight">
 		<a href="#" id="email" class="copy" title="cuanaloricardo@gmail.com">	<i class="fas fa-envelope"></i> cuanaloricardo@gmail.com </a>
 		<p>Ricardo Cuanalo | 2019</p>
-		<a href="https://wa.me/5212227420516" target="_blank"><i class="fab fa-whatsapp"></i> +52 (1) 222 742 0516</a>
+		<!--<a href="https://wa.me/5212227420516" target="_blank"><i class="fab fa-whatsapp"></i> +52 (1) 222 741 0516</a>-->
 	</div>
 </footer>
 
